# ctl-cuhe

./: CMakeLists.txt  LICENSE  README.md  glwe_test.cc  tfhe_test.cc
include/: CMakeLists.txt  glwe.cpp  glwe.h  keygenerator.cpp  keygenerator.h  lwe.h  params.h  rns.h  seal.inc  tfhe.cpp  tfhe.h  timer.h
include/gb_cuda/: Bootstrap.cu  CMakeLists.txt  NTT.h  Pack.cu  gb_cuda.cpp  gb_cuda.h  init.cu  kernels.cuh  uint128_cuda.h
